# dotnetserde

./: .flake8  LICENSE  README.md  pyproject.toml
src/dotnetserde/: exceptions.py
src/dotnetserde/binary/: __init__.py  bridge.py  deserialization.py  exceptions.py  handlers.py  instances.py  models.py  types.py
src/dotnetserde/binary/tests/: conftest.py  test_bridge.py  test_deserialization.py
src/dotnetserde/cli/: __init__.py  builtins.py  models.py
src/dotnetserde/cli/tests/: test_models.py
src/dotnetserde/datacontract/: deserialization.py  exceptions.py  handlers.py  models.py  sax.py  xsdatatypes.py
src/dotnetserde/datacontract/tests/: test_deserialization.py
src/dotnetserde/utils/: __init__.py  timezone.py  typing.py
